# kickstart.nvim

./: init.lua  pyproject.toml
