[tool.poetry]
name = "nvim"
version = "0.1.0"
description = ""
authors = ["derpinskV2 <kderpinskiV2@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
neovim = "0.3.1"
django = "5.1"
django-ninja = "1.3.0"
django-ninja-extra = "0.21.4"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
asgiref = "3.8.1"
asyncio = "3.4.3"
attrs = "24.2.0"
beautifulsoup4 = "4.12.3"
contextlib2 = "21.6.0"
django-environ = "0.11.2"
django-extensions = "3.2.3"
frozenlist = "1.4.1"
greenlet = "3.0.3"
html5lib = "1.1"
idna = "3.8"
injector = "0.22.0"
lxml = "5.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
numpy = "2.1.0"
pandas = "2.2.2"
psycopg = "3.2.1"
psycopg-binary = "3.2.1"
psycopg-c = "3.2.1"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pynvim = "0.5.0"
python-dateutil = "2.9.0.post0"
python-slugify = "8.0.4"
pytz = "2024.1"
six = "1.16.0"
soupsieve = "2.6"
sqlparse = "0.5.1"
text-unidecode = "1.3"
types-beautifulsoup4 = "4.12.0.20240511"
types-html5lib = "1.1.11.20240806"
typing-extensions = "4.12.2"
tzdata = "2024.1"
webencodings = "0.5.1"
yarl = "1.9.4"
django-types = "^0.19.1"
django-stubs = "^5.0.4"
types-requests = "^2.32.0.20240712"
django-types-extra = "^0.6.5"
django-postgres-composite-types = "^0.4.2"
types-boto3 = "^1.0.2"
types-pyyaml = "^6.0.12.20240808"
types-sqlalchemy = "^1.4.53.38"
types-python-dateutil = "^2.9.0.20240821"
types-simplejson = "^3.19.0.20240801"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
